# apilab

./: Cargo.toml  dev.sh  prod.sh
doc/: guia.md  referencia-rapida.md
doc/examples/: ciclo-completo.sh  erros.sh  multiplas-sessoes.sh  sse-keepalive.sh
plan/: fase-1-mcp-server.md  fase-2-proxy.md
src/: lib.rs  main.rs
src/gateway/: router.rs
src/protocol/: error.rs  jsonrpc.rs  mcp.rs  mod.rs
src/session/: manager.rs  mod.rs  state.rs
src/tools/: mod.rs  ping.rs  registry.rs
src/transport/: handler.rs  mod.rs  sse.rs
